--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "lodash": "~1.2.1",
     "async": "~0.1.22",
     "request": "~2.12.0",
-    "num": "~0.2.1",
+    "num": "abrkn/node-num",
     "debug": "~0.7.2",
     "nonce": "~1.0.3",
     "hail": "~0.0.11",
