--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "num": "git://github.com/abrkn/node-num.git",
     "debug": "~0.7.2",
     "nonce": "~1.0.3",
-    "hail": "~0.0.11",
+    "hail": "0.0.12",
     "konfu": "~1.1.4",
     "cli-table": "~0.2.0",
     "optimist": "~0.5.0"
